Visibility fix

--- a/src/scss/_people-talking.scss
+++ b/src/scss/_people-talking.scss
@@ -26,7 +26,7 @@
     padding: 30px 0;
 }
 
-.people-talking_block img{
+.people-talking__block img{
     cursor: pointer;
 }
 
